--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # https://github.com/sonofmagic/weapp-tailwindcss-webpack-plugin/blob/main/demo/uni-app/.env
 # 假如 jit 模式 HMR 失效
 TAILWIND_MODE=watch
+VUE_APP_API_URL = http://127.0.0.1:8080
